fix footer alignment

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -9,6 +9,7 @@
  
   ul{
     margin:0;
+    padding-left: 0;
   }
   li:last-child{
     margin-top:1rem;
